--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,22 +15,22 @@
     "isolatedModules": true,
     "allowSyntheticDefaultImports": true,
     "downlevelIteration": true,
-    "strict": true,
     "resolveJsonModule": true,
     "importHelpers": true,
     "skipLibCheck": true,
     "declaration": true,
     "noImplicitThis": true,
     "forceConsistentCasingInFileNames": true,
+    "strict": true,
     "strictNullChecks": true,
+    "incremental": true,
+    "esModuleInterop": true,
     "baseUrl": ".",
     "paths": {
       "*": [
         "src/*"
       ]
     },
-    "incremental": true,
-    "esModuleInterop": true
   },
   "exclude": [
     "node_modules"
